Adicioanado campo para envio de email cc

--- a/templates/clientes.html
+++ b/templates/clientes.html
@@ -24,6 +24,11 @@
                 <input type="email" class="form-control" id="email" name="email" required>
             </div>
             <div class="col-md-6">
+                <label for="email_cc" class="form-label">E-mails em Cópia (CC)</label>
+                <input type="text" class="form-control" id="email_cc" name="email_cc"
+                    placeholder="Ex: email1@exemplo.com, email2@exemplo.com">
+            </div>
+            <div class="col-md-6">
                 <label for="telefone" class="form-label">Telefone</label>
                 <input type="text" class="form-control" id="telefone" name="telefone" required>
             </div>
