--- a/templates/index.html
+++ b/templates/index.html
@@ -184,6 +184,18 @@
                             </a>
                         </div>
 
+                        <div class="col-md-4">
+                            <a href="{{ url_for('listar_empresas') }}" class="btn btn-outline-primary w-100">
+                                Empresas Cadastradas
+                            </a>
+                        </div>
+
+                        <div class="col-md-4">
+                            <a href="{{ url_for('listar_acionistas') }}" class="btn btn-outline-primary w-100">
+                                Acionistas Cadastrados
+                            </a>
+                        </div>
+
                     </div>
                 </div>
             </div>
