--- a/templates/listar_acionistas.html
+++ b/templates/listar_acionistas.html
@@ -32,6 +32,7 @@
                 <td>
                     <a href="{{ url_for('editar_acionista', acionista_id=a.id) }}" class="btn btn-warning btn-sm">Editar</a>
                     <a href="{{ url_for('excluir_acionista', acionista_id=a.id) }}" class="btn btn-danger btn-sm" onclick="return confirm('Tem certeza que deseja excluir?');">Excluir</a>
+                    <a href="{{ url_for('vincular_acionista') }}" class="btn btn-info btn-sm">Vincular Empresa</a>
                 </td>
             </tr>
             {% endfor %}
