--- a/templates/upload_boleto.html
+++ b/templates/upload_boleto.html
@@ -87,6 +87,9 @@
     <div class="text-center mt-4">
         <a href="{{ url_for('index') }}?aba=financeiro" class="btn btn-secondary">Voltar</a>
     </div>
+    <div class="col-md-2">
+        <a href="{{ url_for('listar_faturas') }}" class="btn btn-outline-primary w-100">Faturas Cadastradas</a>
+    </div>
 </div>
 
 <script>
